# misc

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_ENHANCEMENT_PLAN.md  README.md  app.py  benchmark_report.txt  benchmark_results.json  benchmarks.py  config.py  demo.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  simple_demo.py  test_app.py  test_backends.py  test_e2e.py  test_simplified.py  test_training.py  transformer.py
assets/css/: visualizations.css
docs/: MODERNIZATION_SUMMARY.md  PROJECT_SUMMARY.md  SIMPLIFICATION_REPORT.md
fin-ledger/: .gitignore  README.md  pyproject.toml
fin-ledger/app/: benefits.py  config.py  db.py  documents.py  main.py  plaid_sync.py  schema.sql  statements.py  static_mount.py
fin-ledger/benefits/: venture_x.yaml
fin-ledger/data/parquet/: accounts.parquet  documents.parquet  statements.parquet  transactions.parquet
fin-ledger/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
fin-ledger/web/src/: index.css  main.tsx
fin-ledger/web/src/routes/: Benefits.tsx  Dashboard.tsx  Documents.tsx  Fees.tsx  Spend.tsx  Statements.tsx  Transactions.tsx
fin-ledger/web/src/ui/: Layout.tsx
legacy/: README.md
legacy/telegraf/rpi/dht_sensor/: sensor_logging.py
old_tests/: benchmark_report.txt  demo.py  test_backends.py
scripts/: integration_test.py  quick_compare.py  quick_training.py
simplified/: README.md  simple_config.py  simple_transformer.py
telegraf/rpi/dht_sensor/: ambient_sensor.service  sensor_logging.py  sensor_logging.service
tests/: __init__.py  conftest.py  test_e2e.py  test_enhanced_schema.py  test_performance.py  test_simplified.py
transformer-lab/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  transformer.py
transformer-lab/assets/js/: attention_visualization.js  performance_charts.js
transformer-lab/tests/: test_simplified.py
transformerlab/: __init__.py  app.py  benchmarks.py  cli.py  config.py  version_check.py
transformerlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
transformerlab/backends/: __init__.py  abstract.py  factory.py
transformerlab/backends/numpy_backend/: __init__.py  attention.py  feed_forward.py  normalization.py  optimizer.py  transformer.py
transformerlab/backends/python_backend/: __init__.py  attention.py  feed_forward.py  normalization.py  optimizer.py  transformer.py  utils.py
transformerlab/backends/torch_backend/: __init__.py  attention.py  feed_forward.py  normalization.py  optimizer.py  transformer.py
transformerlab/core/: __init__.py  activations.py  attention.py  feed_forward.py  normalization.py  optimizer.py  positional_encoding.py  tokenizer.py  transformer.py
transformerlab/data/: tiny_shakespeare.txt
transformerlab/schema/: __init__.py  auto_repair.py  model_config.py
transformerlab/static/js/: network_architecture.js
transformerlab/tests/: conftest.py  test_backends_comprehensive.py  test_normalization.py  test_performance.py  test_tokenizer.py  test_training.py  test_transformer.py
transformerlab/ui/: __init__.py  config_sidebar.py  experiments.py  training.py  visualizations.py
transformerlab/viz/: __init__.py  plots.py
