[project]
name = "fin-ledger"
version = "0.1.0"
description = "Headless finance data layer with DuckDB/Parquet and FastAPI"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [ { name = "Fin Ledger" } ]
keywords = ["finance", "duckdb", "plaid", "fastapi", "parquet"]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "plaid-python>=28.0.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.0",
  "httpx>=0.27.0",
  "fpdf2>=2.7.9"
]

[tool.uv]
# Using uv for dependency management and execution
